syntax = "proto3";

package go.micro.srv.GetSmscd;

service Example {
	rpc GetSmscd(Request) returns (Response) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
}

message Message {
	string say = 1;
}

message Request {
	// 手机号
	string Mobile = 1;
	// 验证码
	string Text = 2;
	// uuid
	string Uuid = 3;
}

message Response {
	string ErrNo = 1;
	string ErrMsg = 2;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
